Mod API v1.2.b: new renderer, multiplayer update